# FastAPI

./: .gitignore  Dockerfile  docker-compose.yml  env.template
backend/: Makefile  debug.yml  postgres  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20241012_0a86c7e693bb_v1.py  20241012_d5df5347888f_test.py
backend/app/: exceptions.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: order.py  orderitem.py  product.py
backend/app/schemas/order/: order.py  order_status.py
backend/app/schemas/orderitem/: orderitem.py
backend/app/schemas/product/: product.py
backend/app/service/: order.py  orderitem.py  product.py
backend/config/: app.py  db.py
backend/database/: db_accessor.py  exceptions.py  unitofwork.py
backend/database/models/: __init__.py  order.py  orderitem.py  product.py
backend/database/repository/: order.py  orderitem.py  product.py  repository.py
backend/tests/: conftest.py  test_order.py
